# gen-ai-prototype

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
api/: agent.py  db.py  main.py  models.py
api/routes/: campaigns.py  emails.py  workflow.py
api/skills/: analyze.py  creative.py  generate.py  search.py  segment.py
gui/: package-lock.json  package.json
gui/app/: globals.css  layout.tsx  page.tsx
gui/app/[code]/: page.tsx
gui/app/[code]/[skill]/: page.tsx
gui/components/: CampaignInbox.tsx  CampaignOverviewHeader.tsx  CampaignTimeline.tsx  CampaignWorkspace.tsx  ComposeForm.tsx  MessageBubble.tsx  NewCampaignModal.tsx  SkillCardGrid.tsx  SkillThread.tsx  StepActionBar.tsx  ThreadClient.tsx  WorkflowBar.tsx  WorkflowPipeline.tsx
gui/components/reply-cards/: AssetGridCard.tsx  CreativeCard.tsx  LocalizationCard.tsx  PerformanceCard.tsx  SegmentCard.tsx  index.tsx
gui/lib/: api.ts  types.ts
